# sge2

./: Cargo.toml
examples/: closure.rs  color_cycle.rs  hello_world.rs  moving_circle.rs  moving_rect.rs  moving_texture.rs  text_input.rs
src/: builder.rs  canvas.rs  draw.rs  engine.rs  fullscreen.rs  functions.rs  gfx.rs  lib.rs  panic.rs  surface.rs  texture.rs
src/engine/: error.rs  mod.rs
src/input/: functions.rs  mod.rs  state.rs
src/texture/: error.rs  mod.rs
