[package]
name = "sge"
version = "0.1.0"
authors = ["mcb2003 <mikey@blindcomputing.org>"]
description = "A minimal game engine inspired by the OLC Pixel Game Engine"
keywords = ["gamedev", "graphics", "sdl", "wrapper", "sge"]
categories = ["game-development", "game-engines", "multimedia", "rendering::engine"]
license = "MIT"
edition = "2018"
exclude = ["sge.png"]

[features]
default = ["gfx", "image"]
bundled_sdl = ["sdl2/bundled"]
static_sdl = ["sdl2/static-link"]
gfx = ["sdl2/gfx"]
image = ["sdl2/image"]

[dependencies]
fnv = "1.0.7"
once_cell = "1.10.0"
sdl2 = { version = "0.35.2", features = ["unsafe_textures"] }

[[example]]
name = "moving_circle"
required-features = ["gfx"]
